namespaces/live.cloud-platform.service.justice.gov.uk/claim-criminal-injuries-compensation-stag/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: claim-criminal-injuries-compensation-stag
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "staging"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "CICA"
    cloud-platform.justice.gov.uk/slack-channel: "cica-digital"
    cloud-platform.justice.gov.uk/application: "cica-apply-service"
    cloud-platform.justice.gov.uk/owner: "CICA: infrastructure@cica.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/CriminalInjuriesCompensationAuthority/"
    cloud-platform.justice.gov.uk/team-name: "cica"
    cloud-platform.justice.gov.uk/review-after: ""
